--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,40 @@
-# Node.js
+# Dependencies
+node_modules
 node_modules/
+
+# Production
+build
+dist
 dist/
+
+# Testing
+coverage
+.nyc_output
+
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS files
+.DS_Store
+Thumbs.db
 
 # Editor directories and files
 .idea/
