--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@sentry/browser": "^9.14.0",
+    "@sentry/react": "^9.14.0",
+    "@sentry/replay": "^7.116.0",
+    "@sentry/tracing": "^7.120.3",
     "@tailwindcss/forms": "^0.5.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -27,7 +31,25 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test:e2e": "cypress open",
+    "test:e2e:headless": "cypress run",
+    "test:a11y": "react-scripts test --testMatch='**/?(*.)+(a11y).[jt]s?(x)'",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.d.ts",
+      "!src/index.tsx",
+      "!src/reportWebVitals.ts"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "clover"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +71,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "cypress": "^13.3.0",
+    "jest-axe": "^8.0.0",
+    "msw": "^1.3.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
   }
