--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,30 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:integration": "jest --testMatch='**/?(*.)+(integration).[jt]s?(x)'",
+    "test:unit": "jest --testMatch='**/?(*.)+(unit).[jt]s?(x)'",
     "seed": "ts-node src/utils/seedDatabase.ts"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "src/**/*.{js,ts}",
+      "!src/**/*.d.ts",
+      "!**/node_modules/**"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "clover"
+    ]
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "@sentry/node": "^9.14.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -28,8 +48,12 @@
     "@types/jsonwebtoken": "^9.0.4",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.10",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
+    "msw": "^1.3.2",
     "prisma": "^5.5.2",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
