Fix Sentry imports and API usage in client code
- Update Sentry imports to use proper modules
- Fixed BrowserTracing and Replay imports in index.tsx
- Updated transaction API usage in AdminPage and other components
- Fixed test mocks and typings for Axios responses
- Added @types/jest-axe for better TypeScript support

--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest-axe": "^3.5.9",
     "autoprefixer": "^10.4.16",
     "cypress": "^13.3.0",
     "jest-axe": "^8.0.0",
