--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "@sentry/integrations": "^7.114.0",
     "@sentry/node": "^9.14.0",
+    "@sentry/profiling-node": "^9.14.0",
     "@sentry/types": "^9.14.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
