Fix Sentry integration issues
- Update Sentry imports and initialization to work with v9.x
- Install required @sentry/integrations and @sentry/profiling-node packages
- Replace Sentry.startTransaction with imported startTransaction function
- Fix Express integration import to use correct package
- Add proper profiling integration
- Update package description

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tfwmma-lifting-server",
   "version": "1.0.0",
-  "description": "Backend for TFW MMA Lifting Program",
+  "description": "Backend for TFW MMA Lifting Program with Sentry monitoring",
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
