--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tfwmma-lifting-server",
   "version": "1.0.0",
-  "description": "Backend for TFW MMA Lifting Program with Sentry monitoring",
+  "description": "Backend for TFW MMA Lifting Program",
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
@@ -12,14 +12,12 @@
     "test:watch": "jest --watch",
     "test:integration": "jest --testMatch='**/?(*.)+(integration).[jt]s?(x)'",
     "test:unit": "jest --testMatch='**/?(*.)+(unit).[jt]s?(x)'",
-    "seed": "ts-node src/utils/seedDatabase.ts"
+    "seed": "ts-node src/utils/seedDatabase.ts",
+    "seed:default-schedules": "ts-node src/scripts/seedDefaultSchedules.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
-    "@sentry/integrations": "^7.114.0",
-    "@sentry/node": "^9.14.0",
-    "@sentry/profiling-node": "^9.14.0",
-    "@sentry/types": "^9.14.0",
+
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
