Add historical data page for lift progression tracking
- Implements TS-260: New page to track lifting progression
- Add /historical-data route with graphical representation of four main lifts
- Include time range selector for 1, 3, 6, 12 months
- Create test data seeding script with 238 historical entries
- Add comprehensive unit tests for new API endpoint

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_SENTRY_DSN="YOUR_SENTRY_DSN_HERE"
+REACT_APP_SENTRY_DSN="https://db2073fe4f4194b984f95a2da594cebc@o4509334617456640.ingest.us.sentry.io/4509516466487296"
 REACT_APP_API_URL=http://localhost:3001
